--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -39,8 +39,10 @@ jobs:
         with:
           output-path: verify_files.json
           # Specify patterns
+          include: |
+            src/
           exclude: |
-                .github/
+            .github/
           # If you have config.toml
           config: .verify-helper/config.toml
       - name: parse-doxygen
@@ -67,15 +69,15 @@ jobs:
 
   verify:
     runs-on: ubuntu-latest
-    needs: [setup]
+    needs: [ setup ]
     env:
       SPLIT_SIZE: "20"
     strategy:
       matrix:
         # prettier-ignore
         index:
-          ["00", "01", "02", "03", "04", "05", "06", "07", "08", "09",
-           "10", "11", "12", "13", "14", "15", "16", "17", "18", "19"]
+          [ "00", "01", "02", "03", "04", "05", "06", "07", "08", "09",
+            "10", "11", "12", "13", "14", "15", "16", "17", "18", "19" ]
     steps:
       - uses: actions/checkout@v4
         with:
@@ -118,21 +120,21 @@ jobs:
 
   docs-and-check:
     runs-on: ubuntu-latest
-    needs: [verify]
+    needs: [ verify ]
     outputs:
       upload-pages: ${{steps.upload-pages.outcome == 'success'}}
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2147483647
-  
+
       - name: Download verify_files.json and all artifacts
         id: all-artifacts
         uses: competitive-verifier/actions/download-verify-artifact@v2
         with:
           download-all: true
           artifact-root: .artifacts/
-  
+
       - name: Extract bundled
         shell: bash
         run: |
@@ -145,7 +147,7 @@ jobs:
           fi
         env:
           SRCDIR: .artifacts/Bundled-${{ runner.os }}
-  
+
       - name: Set up competitive-verifier
         uses: competitive-verifier/actions/setup@v2
         with:
